Fixed Overflow
Overflow on body fixed.

--- a/wp-content/themes/idm250/styles/main.css
+++ b/wp-content/themes/idm250/styles/main.css
@@ -14,6 +14,7 @@ html {
 }
 body {
   position: relative;
+  overflow: hidden;
 }
 body::before {
   position: absolute;
